--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,13 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.container {
+    width: 100%;
+    height: 500px;
+    background-image: url(../img/bg.png);
+    background-size: cover;
+}
+
 .navbar {
     width: 100%;
     height: 60px;
@@ -11,6 +18,7 @@ body {
     display: flex;
     align-items: center;
     padding-left: 9%;
+    background-color: white;
 }
 
 .navbar p {
@@ -34,7 +42,37 @@ body {
 
 .nav-link a:hover{
     color: #dfe6e9;
-    
 
 }
     
+
+.text-hero {
+    position: absolute;
+    left: 9%;
+    top: 300px;
+    line-height: 0%;
+}
+
+.text-hero p:first-child{
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 50px;
+}
+
+.text-hero p:nth-child(2){
+    font-family: 'Lobster', cursive;
+    font-size: 50px;
+    margin: 0;
+}
+
+.text-hero p:nth-last-child(3){
+    font-size: 30px;
+    font-weight: bold;
+    line-height: normal;
+} 
+
+.btn-here{ 
+    width: 100px;
+    height: 50px;
+
+}
