--- a/CSS/style.css
+++ b/CSS/style.css
@@ -178,3 +178,87 @@ body{
     color: white;
     border: none;
 }
+
+text-skill{
+    margin-left: 12%;
+    margin-top: 50px;
+    line-height: 0px;
+    width: 450px;
+}
+.text-skill p:first-child{
+    font-size: 24px;
+    line-height: 0px;
+    font-weight: 700;
+}
+.text-skill p:nth-child(2){
+    font-size: 14px;
+    font-weight: bold;
+}
+.text-skill p:nth-child(3){
+    font-size: 14px;
+    font-weight: 100;
+    line-height: normal;
+}
+
+.card-skill{
+    display: flex;
+    width: 78%;
+    margin: 50px auto;
+    justify-content: space-evenly
+}
+
+.skill1,
+.skill2,
+.skill3{
+    width: 250px;
+    height: 320px;
+    background-color: grey;
+    display: flex;
+    flex-direction:column ;
+    align-items: center;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    text-align: center;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+
+}
+.skill1 div,
+.skill2 div,
+.skill3 div{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: grey;
+    background-color: rgb(255, 255, 255);
+}
+.skill1 p:first-of-type,
+.skill2 p:first-of-type,
+.skill3 p:first-of-type{
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.skill1 p:nth-last-child(2),
+.skill2 p:nth-last-child(2),
+.skill3 p:nth-last-child(2){
+    font-size: 12px;
+    color: white;
+}
+
+.skill1 button,
+.skill2 button,
+.skill3 button{
+    width: 90px;
+    height: 28px;
+    border-radius: 10px;
+    background-color: white;
+    border: none;
+    font-size: 12px;
+}
